# BinDInG

./: .gitignore  README.md  pyproject.toml
BinDInG.egg-info/: PKG-INFO  SOURCES.txt
src/projects/70Zn_2024/: deconv_params.py  setup.py
src/projects/Example/: deconv_params.py  paths.py  setup.py
src/projects/test/: setup.py
src/scripts/: binding.py  binding_bins.py  deconv_playground.ipynb  exe_binding.py  get_matrix_and_specs.py  make_new_project.sh  misc.py  paths.py  plot_binding_results.py  td_deconv.py  test.ipynb
